test/negative/clafertransitionconstraint07.cfr
// Test for negative clafer constraint

a
 xor b ?
  	c ##> 
  	d 
  	e 



/*
Same as clafertransitionconstraint01, instead of failing it takes the following clafer.
*/
